--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,8 +4,17 @@ body {
     font-family: 'Lato', sans-serif;
     display: flex;
     flex-direction: column;
-    h1 {
-        font-size: 32px;
+    #path {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: baseline;
+        padding-left: 20px;
+        padding-right: 20px;
+        h1 {
+            font-size: 32px;
+            color: #777;
+        }
     }
     #mapdiv {
         margin-top: 25px;
