--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
+@import './node_modules/include-media/dist/_include-media.scss';
+
+$breakpoints: (phone: 640px,
+               tablet: 768px,
+               desktop: 1024px) !default;
 
 body {
     font-family: 'Lato', sans-serif;
@@ -14,6 +19,9 @@ body {
         h1 {
             font-size: 32px;
             color: #777;
+            @include media("<tablet") {
+                font-size: 24px;
+            }
         }
     }
     .leaflet-container {
