--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,15 +5,21 @@ $breakpoints: (phone: 640px,
                tablet: 768px,
                desktop: 1024px) !default;
 
-body {
+#flexdiv {
     font-family: 'Lato', sans-serif;
     display: flex;
     flex-direction: column;
-    #path {
+    #MotionMenu {
+        padding-top: 10px;
+        height: 50px;
+        width: 50px;
+        margin: 0 auto;
+    }
+    #timer {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: space-between;
-        align-items: baseline;
+        align-items: center;
         padding-left: 20px;
         padding-right: 20px;
         h1 {
@@ -22,6 +28,9 @@ body {
             @include media("<tablet") {
                 font-size: 24px;
             }
+        }
+        h3 {
+            margin: 0 auto;
         }
     }
     .leaflet-container {
