--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -20,10 +20,10 @@ $primary: #777;
         padding-right: 20px;
         h1 {
             margin-top: 5px;
-            font-size: 32px;
+            font-size: 24px;
             color: $primary;
-            @include media("<tablet") {
-                font-size: 24px;
+            @include media(">tablet") {
+                font-size: 32px;
             }
         }
         h3 {
@@ -33,21 +33,42 @@ $primary: #777;
     #basemap {
         margin-top: 10px;
         text-align: center;
-        #infocards {
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            span {
-                font-size: 22px;
-                padding: 20px;
-                border-radius: 15px;
-                margin-left: 10px;
+        #dashboard {
+            #infocards {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                span {
+                    font-size: 16px;
+                    padding: 20px;
+                    border-radius: 15px;
+                    margin: 10px auto 0px;
+                    width: 300px;
+                }
+                span.kpi {
+                    background-color: lighten($primary, 40%);
+                }
+                span.fact {
+                    background-color: lighten($primary, 20%);
+                }
             }
-            span.kpi {
-                background-color: lighten($primary, 40%);
+            #line-chart {
+                margin: 10px auto 0px;
+                width: 300px;
             }
-            span.fact {
-                background-color: lighten($primary, 20%);
+        }
+        @include media(">tablet") {
+            #dashboard {
+                display: flex;
+                flex-direction: row;
+                #infocards {
+                    display: flex;
+                    flex-direction: column;
+                    margin-left: 25%;
+                }
+                #line-chart {
+                    margin: 10px 0px 0px 0px;
+                }
             }
         }
         .leaflet-container {
