--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,11 @@ $breakpoints: (phone: 640px,
                tablet: 768px,
                desktop: 1024px) !default;
 
-$primary: #777;
+$primary: #999999;
+$darkPrimary: darken($primary, 30%);
+$accent1: #22b5bf;
+$accent2: #1281ca;
+$accent3: rgb(255, 187, 40);
 
 #flexdiv {
     font-family: 'Lato', sans-serif;
@@ -28,6 +32,7 @@ $primary: #777;
         }
         h3 {
             margin: 0 auto;
+            color: $darkPrimary;
         }
     }
     #basemap {
@@ -52,13 +57,17 @@ $primary: #777;
                     padding: 20px;
                     border-radius: 15px;
                     margin: 10px auto 0px;
-                    width: 300px;
+                    width: 250px;
+                    color: #fff;
                 }
-                span.kpi {
-                    background-color: lighten($primary, 40%);
+                span.kpi1 {
+                    background-color: $accent1;
                 }
-                span.fact {
-                    background-color: lighten($primary, 20%);
+                span.kpi2 {
+                    background-color: $accent2;
+                }
+                span.kpi3 {
+                    background-color: $accent3;
                 }
             }
             #line-chart {  // override default recharts styling
@@ -81,10 +90,14 @@ $primary: #777;
                         }
                         .recharts-text {
                             font-size: 10px;
+                            color: $darkPrimary;
                         }
                     }
                     .recharts-legend-wrapper {
                         width: 300px !important;
+                        .recharts-legend-item-text {
+                            color: $darkPrimary;
+                        }
                     }
                 }
             }
