Add polylines when start/end differs

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@ $breakpoints: (phone: 640px,
                desktop: 1024px) !default;
 
 $primary: #999999;
+$lightPrimary: lighten($primary, 35%);
 $darkPrimary: darken($primary, 30%);
 $accent1: #22b5bf;
 $accent2: #1281ca;
@@ -50,7 +51,7 @@ $accent3: rgb(255, 187, 40);
                 @include media(">tablet") {
                     display: flex;
                     flex-direction: column;
-                    margin-left: 20%;
+                    margin-left: 5%;
                 }
                 span {
                     font-size: 16px;
@@ -101,6 +102,14 @@ $accent3: rgb(255, 187, 40);
                     }
                 }
             }
+            #desc {
+                margin-left: 10px;
+                margin-right: 10px;
+                padding: 10px;
+                border-radius: 3px;
+                background-color: $lightPrimary;
+                font-size: 16px;
+            }
         }
         .leaflet-container {
             margin-top: 20px;
@@ -108,6 +117,10 @@ $accent3: rgb(255, 187, 40);
             max-height: 475px;
             div.leaflet-pane.leaflet-map-pane > div.leaflet-pane.leaflet-popup-pane > div > div.leaflet-popup-content-wrapper > div {
                 font-family: 'Lato', sans-serif;
+            }
+            path.leaflet-interactive {
+                stroke-width: 5px;
+                stroke-dasharray: 10,10;
             }
         }
     }
